--- a/control
+++ b/control
@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Arthur Gautier <baloo@gandi.net>
 Build-Depends: debhelper (>= 9), quilt
-Standards-Version: 3.9.5
+Standards-Version: 3.9.6
 Homepage: http://dpdk.org/
 #Vcs-Git: git://anonscm.debian.org/collab-maint/dpdk.git
 #Vcs-Browser: http://anonscm.debian.org/?p=collab-maint/dpdk.git;a=summary
@@ -26,7 +26,7 @@ Description: DPDK - Westmere
 
 Package: dpdk-sandybridge
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, dpdk-kernel-modules (=${source:Version})
+Depends: ${shlibs:Depends}, ${misc:Depends}, dpdk-kernel-modules (=${source:Version}), libpcap-dev
 Description: DPDK - Sandy Bridge
  DPDK is a set of libraries and drivers for fast packet processing. It was
  designed to run on any processors knowing Intel x86 has been the first CPU
@@ -34,7 +34,7 @@ Description: DPDK - Sandy Bridge
 
 Package: dpdk-ivybridge
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, dpdk-kernel-modules (=${source:Version})
+Depends: ${shlibs:Depends}, ${misc:Depends}, dpdk-kernel-modules (=${source:Version}), libpcap-dev
 Description: DPDK - Ivy Bridge
  DPDK is a set of libraries and drivers for fast packet processing. It was
  designed to run on any processors knowing Intel x86 has been the first CPU
