--- a/rules
+++ b/rules
@@ -24,7 +24,7 @@ dh_auto_configure/westmere:
 	sed -ri 's,(RTE_BUILD_SHARED_LIB=).*,\1y,' $(CURDIR)/$(DPDK_TARGET)-westmere/.config
 	sed -ri 's,(LIBRTE_PMD_PCAP=).*,\1y,'      $(CURDIR)/$(DPDK_TARGET)-westmere/.config
 	sed -ri 's,(RTE_EAL_IGB_UIO=).*,\1n,'      $(CURDIR)/$(DPDK_TARGET)-westmere/.config
-	sed -ri 's,(RTE_LIBRTE_KNI=).*,\1n,'      $(CURDIR)/$(DPDK_TARGET)-westmere/.config
+	sed -ri 's,(RTE_KNI_KMOD=).*,\1n,'         $(CURDIR)/$(DPDK_TARGET)-westmere/.config
 
 .PHONY: dh_auto_configure/sandybridge
 dh_auto_configure/sandybridge:
@@ -34,7 +34,7 @@ dh_auto_configure/sandybridge:
 	sed -ri 's,(RTE_BUILD_SHARED_LIB=).*,\1y,' $(CURDIR)/$(DPDK_TARGET)-sandybridge/.config
 	sed -ri 's,(LIBRTE_PMD_PCAP=).*,\1y,'      $(CURDIR)/$(DPDK_TARGET)-sandybridge/.config
 	sed -ri 's,(RTE_EAL_IGB_UIO=).*,\1n,'      $(CURDIR)/$(DPDK_TARGET)-sandybridge/.config
-	sed -ri 's,(RTE_LIBRTE_KNI=).*,\1n,'      $(CURDIR)/$(DPDK_TARGET)-sandybridge/.config
+	sed -ri 's,(RTE_KNI_KMOD=).*,\1n,'         $(CURDIR)/$(DPDK_TARGET)-sandybridge/.config
 
 .PHONY: dh_auto_configure/ivybridge
 dh_auto_configure/ivybridge:
@@ -44,7 +44,7 @@ dh_auto_configure/ivybridge:
 	sed -ri 's,(RTE_BUILD_SHARED_LIB=).*,\1y,' $(CURDIR)/$(DPDK_TARGET)-ivybridge/.config
 	sed -ri 's,(LIBRTE_PMD_PCAP=).*,\1y,'      $(CURDIR)/$(DPDK_TARGET)-ivybridge/.config
 	sed -ri 's,(RTE_EAL_IGB_UIO=).*,\1n,'      $(CURDIR)/$(DPDK_TARGET)-ivybridge/.config
-	sed -ri 's,(RTE_LIBRTE_KNI=).*,\1n,'      $(CURDIR)/$(DPDK_TARGET)-ivybridge/.config
+	sed -ri 's,(RTE_KNI_KMOD=).*,\1n,'         $(CURDIR)/$(DPDK_TARGET)-ivybridge/.config
 
 override_dh_auto_build: dh_auto_build/westmere dh_auto_build/sandybridge dh_auto_build/ivybridge
 
