enable RTE_PCI_CONFIG and RTE_PCI_EXTENDED_TAG

--- a/rules
+++ b/rules
@@ -25,6 +25,8 @@ dh_auto_configure/westmere:
 	sed -ri 's,(LIBRTE_PMD_PCAP=).*,\1y,'      $(CURDIR)/$(DPDK_TARGET)-westmere/.config
 	sed -ri 's,(RTE_EAL_IGB_UIO=).*,\1n,'      $(CURDIR)/$(DPDK_TARGET)-westmere/.config
 	sed -ri 's,(RTE_KNI_KMOD=).*,\1n,'         $(CURDIR)/$(DPDK_TARGET)-westmere/.config
+	sed -ri 's,(RTE_PCI_CONFIG=).*,\1y,'       $(CURDIR)/$(DPDK_TARGET)-westmere/.config
+	sed -ri 's,(RTE_PCI_EXTENDED_TAG=).*,\1"on",'       $(CURDIR)/$(DPDK_TARGET)-westmere/.config
 
 .PHONY: dh_auto_configure/sandybridge
 dh_auto_configure/sandybridge:
@@ -35,6 +37,8 @@ dh_auto_configure/sandybridge:
 	sed -ri 's,(LIBRTE_PMD_PCAP=).*,\1y,'      $(CURDIR)/$(DPDK_TARGET)-sandybridge/.config
 	sed -ri 's,(RTE_EAL_IGB_UIO=).*,\1n,'      $(CURDIR)/$(DPDK_TARGET)-sandybridge/.config
 	sed -ri 's,(RTE_KNI_KMOD=).*,\1n,'         $(CURDIR)/$(DPDK_TARGET)-sandybridge/.config
+	sed -ri 's,(RTE_PCI_CONFIG=).*,\1y,'       $(CURDIR)/$(DPDK_TARGET)-sandybridge/.config
+	sed -ri 's,(RTE_PCI_EXTENDED_TAG=).*,\1"on",'       $(CURDIR)/$(DPDK_TARGET)-sandybridge/.config
 
 .PHONY: dh_auto_configure/ivybridge
 dh_auto_configure/ivybridge:
@@ -45,6 +49,8 @@ dh_auto_configure/ivybridge:
 	sed -ri 's,(LIBRTE_PMD_PCAP=).*,\1y,'      $(CURDIR)/$(DPDK_TARGET)-ivybridge/.config
 	sed -ri 's,(RTE_EAL_IGB_UIO=).*,\1n,'      $(CURDIR)/$(DPDK_TARGET)-ivybridge/.config
 	sed -ri 's,(RTE_KNI_KMOD=).*,\1n,'         $(CURDIR)/$(DPDK_TARGET)-ivybridge/.config
+	sed -ri 's,(RTE_PCI_CONFIG=).*,\1y,'       $(CURDIR)/$(DPDK_TARGET)-ivybridge/.config
+	sed -ri 's,(RTE_PCI_EXTENDED_TAG=).*,\1"on",'       $(CURDIR)/$(DPDK_TARGET)-ivybridge/.config
 
 override_dh_auto_build: dh_auto_build/westmere dh_auto_build/sandybridge dh_auto_build/ivybridge
 
